--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -32,7 +32,6 @@ requirements:
     - ninja                          # [win]
     - make                           # [unix]
     - pkgconfig
-    - qt6-main                       # [build_platform != target_platform and not ppc64le]
   host:
     - xorg-libxfixes                 # [linux]
     - flann
@@ -45,7 +44,7 @@ requirements:
     - vtk
     - libpng
     - glew
-    - qt6-main  # [not ppc64le]
+    - qt-main  # [not ppc64le]
   run:
     - flann
     - qhull
