--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -1,7 +1,3 @@
-build_platform:
-  linux_aarch64: linux_64
-  linux_ppc64le: linux_64
-  osx_arm64: osx_64
 conda_build:
   pkg_format: '2'
 conda_forge_output_validation: true
@@ -9,9 +5,14 @@ github:
   branch_name: main
   tooling_branch_name: main
 provider:
-  linux_aarch64: azure
-  linux_ppc64le: azure
-  win: azure
+  win: github_actions
+  linux_64: github_actions
+  linux_aarch64: github_actions
+  osx_64: github_actions
+  osx_arm64: github_actions
+build_platform:
+  osx_arm64: osx_arm64
+  linux_aarch64: linux_64
 remote_ci_setup:
 - liblief=0.11.5
 - conda-forge-ci-setup=3
