--- a/.ci_support/linux_64_.yaml
+++ b/.ci_support/linux_64_.yaml
@@ -1,17 +1,17 @@
 c_stdlib:
 - sysroot
 c_stdlib_version:
-- '2.12'
+- '2.17'
 cdt_name:
-- cos6
+- cos7
 channel_sources:
 - conda-forge
 channel_targets:
-- conda-forge main
+- freecad dev
 cxx_compiler:
 - gxx
 cxx_compiler_version:
-- '12'
+- '13'
 docker_image:
 - quay.io/condaforge/linux-anvil-cos7-x86_64
 flann:
@@ -22,13 +22,12 @@ libboost_devel:
 - '1.84'
 libpng:
 - '1.6'
-pin_run_as_build:
-  flann:
-    max_pin: x.x.x
+pcl:
+- 1.14.1
 qhull:
 - '2020.2'
-qt6_main:
-- '6.7'
+qt_main:
+- '5.15'
 target_platform:
 - linux-64
 vtk:
