--- a/.ci_support/linux_aarch64_.yaml
+++ b/.ci_support/linux_aarch64_.yaml
@@ -11,11 +11,11 @@ cdt_name:
 channel_sources:
 - conda-forge
 channel_targets:
-- conda-forge main
+- freecad dev
 cxx_compiler:
 - gxx
 cxx_compiler_version:
-- '12'
+- '13'
 docker_image:
 - quay.io/condaforge/linux-anvil-cos7-x86_64
 flann:
@@ -26,13 +26,12 @@ libboost_devel:
 - '1.84'
 libpng:
 - '1.6'
-pin_run_as_build:
-  flann:
-    max_pin: x.x.x
+pcl:
+- 1.14.1
 qhull:
 - '2020.2'
-qt6_main:
-- '6.7'
+qt_main:
+- '5.15'
 target_platform:
 - linux-aarch64
 vtk:
