--- a/.ci_support/linux_64_.yaml
+++ b/.ci_support/linux_64_.yaml
@@ -5,7 +5,7 @@ c_stdlib_version:
 cdt_name:
 - cos7
 channel_sources:
-- freecad/label/qt5,conda-forge
+- freecad,conda-forge
 channel_targets:
 - freecad dev
 cxx_compiler:
