--- a/.ci_support/osx_arm64_.yaml
+++ b/.ci_support/osx_arm64_.yaml
@@ -7,7 +7,7 @@ c_stdlib:
 c_stdlib_version:
 - '11.0'
 channel_sources:
-- freecad/label/qt5,conda-forge
+- freecad,conda-forge
 channel_targets:
 - freecad dev
 cxx_compiler:
