--- a/.ci_support/win_64_.yaml
+++ b/.ci_support/win_64_.yaml
@@ -1,7 +1,7 @@
 c_stdlib:
 - vs
 channel_sources:
-- freecad/label/qt5,conda-forge
+- freecad,conda-forge
 channel_targets:
 - freecad dev
 cxx_compiler:
