pin library versions and use freecad main channel as target

--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -1,4 +1,10 @@
 channel_sources:
 - freecad,conda-forge
 channel_targets:
-- freecad dev
+- freecad
+vtk:
+- 9.3.0
+pcl:
+- 1.14.1
+libboost_devel:
+- '1.84'
