MNT: Re-rendered with conda-build 25.4.2, conda-smithy 3.48.1, and conda-forge-pinning 2025.05.08.08.33.25

--- a/.ci_support/linux_aarch64_.yaml
+++ b/.ci_support/linux_aarch64_.yaml
@@ -1,23 +1,19 @@
-BUILD:
-- aarch64-conda_cos7-linux-gnu
 c_stdlib:
 - sysroot
 c_stdlib_version:
 - '2.17'
-cdt_arch:
-- aarch64
 cdt_name:
-- cos7
+- conda
 channel_sources:
 - freecad,conda-forge
 channel_targets:
-- freecad dev
+- freecad
 cxx_compiler:
 - gxx
 cxx_compiler_version:
 - '13'
 docker_image:
-- quay.io/condaforge/linux-anvil-cos7-x86_64
+- quay.io/condaforge/linux-anvil-x86_64:alma9
 flann:
 - 1.9.2
 glew:
@@ -36,6 +32,3 @@ target_platform:
 - linux-aarch64
 vtk:
 - 9.3.0
-zip_keys:
-- - c_stdlib_version
-  - cdt_name
