--- a/.ci_support/linux_64_.yaml
+++ b/.ci_support/linux_64_.yaml
@@ -3,17 +3,17 @@ c_stdlib:
 c_stdlib_version:
 - '2.17'
 cdt_name:
-- cos7
+- conda
 channel_sources:
 - freecad,conda-forge
 channel_targets:
-- freecad dev
+- freecad
 cxx_compiler:
 - gxx
 cxx_compiler_version:
 - '13'
 docker_image:
-- quay.io/condaforge/linux-anvil-cos7-x86_64
+- quay.io/condaforge/linux-anvil-x86_64:alma9
 flann:
 - 1.9.2
 glew:
@@ -32,6 +32,3 @@ target_platform:
 - linux-64
 vtk:
 - 9.3.0
-zip_keys:
-- - c_stdlib_version
-  - cdt_name
