--- a/.github/workflows/conda-build.yml
+++ b/.github/workflows/conda-build.yml
@@ -25,12 +25,24 @@ jobs:
             UPLOAD_PACKAGES: True
             os: ubuntu
             runs_on: ['ubuntu-latest']
-            DOCKER_IMAGE: quay.io/condaforge/linux-anvil-cos7-x86_64
+            DOCKER_IMAGE: quay.io/condaforge/linux-anvil-x86_64:alma9
           - CONFIG: linux_aarch64_
             UPLOAD_PACKAGES: True
             os: ubuntu
             runs_on: ['ubuntu-latest']
-            DOCKER_IMAGE: quay.io/condaforge/linux-anvil-cos7-x86_64
+            DOCKER_IMAGE: quay.io/condaforge/linux-anvil-x86_64:alma9
+          - CONFIG: osx_64_
+            UPLOAD_PACKAGES: True
+            os: macos
+            runs_on: ['macos-13']
+          - CONFIG: osx_arm64_
+            UPLOAD_PACKAGES: True
+            os: macos
+            runs_on: ['macos-14']
+          - CONFIG: win_64_
+            UPLOAD_PACKAGES: True
+            os: windows
+            runs_on: ['windows-latest']
     steps:
 
     - name: Checkout code
