--- a/.ci_support/linux_64_.yaml
+++ b/.ci_support/linux_64_.yaml
@@ -7,7 +7,7 @@ cdt_name:
 channel_sources:
 - freecad,conda-forge
 channel_targets:
-- freecad
+- freecad main
 cxx_compiler:
 - gxx
 cxx_compiler_version:
